# coco-device

./: CMakeLists.txt  README.md  conanfile.py
coco/: Buffer.cpp  Buffer.hpp  BufferDevice.hpp  BufferImpl.cpp  BufferImpl.hpp  BufferReader.hpp  BufferWriter.hpp  CMakeLists.txt  DataBuffer.hpp  Device.cpp  Device.hpp  InputDevice.hpp  StateTasks.hpp
coco/native/coco/platform/: BufferDevice_cout.cpp  BufferDevice_cout.hpp
test/: CMakeLists.txt  gTest.cpp
